...
        );
      }
    });

    return _CheckoutPopScope(
      child: Scaffold(
        key: const Key('checkout_screen_scaffold'),
        appBar: useNovaUi
            ? NovaAppBar(titleText: l10n.checkoutTitle)
            : AppBar(title: Text(l10n.checkoutTitle)),
        body: ListView(
          padding: EdgeInsets.fromLTRB(
            AppSpace.xl,
...
