...
        onRefresh: () => ref
            .read(homeViewModelProvider.notifier)
            .refresh(showLoading: false),
        child: NotificationListener<ScrollNotification>(
          onNotification: _onScrollNotification,
          child: CustomScrollView(
            key: const Key('home_scroll_view'),
            // ignore: deprecated_member_use
            cacheExtent: homeCacheExtent,
            controller: _scrollController,
            slivers: [
              ValueListenableBuilder<double>(
                valueListenable: _searchDockTNotifier,
...
